--- a/lua-resty-reql/ubuntu/1.0.0/Dockerfile
+++ b/lua-resty-reql/ubuntu/1.0.0/Dockerfile
@@ -3,7 +3,7 @@ FROM openresty/openresty:xenial
 MAINTAINER Adam Grandquist <grandquista@gmail.com>
 
 RUN apt-get update
-RUN apt-get install -y cpanminus curl git libssl-dev wget
+RUN apt-get install -y cpanminus git libcurl4-openssl-dev libprotobuf-dev libssl-dev wget
 
 RUN /usr/local/openresty/luajit/bin/luarocks install luasec
 RUN /usr/local/openresty/luajit/bin/luarocks install luacrypto
@@ -17,6 +17,6 @@ RUN wget https://download.rethinkdb.com/apt/pool/xenial/main/r/rethinkdb/rethink
 RUN ar x rethinkdb_2.3.5~0xenial_amd64.deb
 RUN tar xvf data.tar.xz
 
-ADD t t
+COPY t t
 
 RUN ./usr/bin/rethinkdb --daemon && prove -r t
