--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ services:
   - docker
 
 before_install:
-  - docker build -t carlad/sinatra .
-  - docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
+  - docker build -t grandquista/lua-resty-reql lua-resty-reql/ubuntu/1.0.0
+  - docker run -d -p 127.0.0.1:80:4567 grandquista/lua-resty-reql /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
   - docker ps -a
 
 script:
-  - docker run carlad/sinatra /bin/sh -c "/usr/bin/rethinkdb --daemon && prove -r t"
+  - docker run grandquista/lua-resty-reql /bin/sh -c "/usr/bin/rethinkdb --daemon && prove -r t"
