Trim ubuntu image.

--- a/lua-resty-reql/ubuntu/1.0.0/Dockerfile
+++ b/lua-resty-reql/ubuntu/1.0.0/Dockerfile
@@ -3,12 +3,10 @@ FROM openresty/openresty:xenial
 MAINTAINER Adam Grandquist <grandquista@gmail.com>
 
 RUN apt-get update
-RUN apt-get install -y cpanminus git libssl-dev wget
+RUN apt-get install -y cpanminus git libssl-dev
 
-RUN /usr/local/openresty/luajit/bin/luarocks install luasec
-RUN /usr/local/openresty/luajit/bin/luarocks install luacrypto
 RUN /usr/local/openresty/luajit/bin/luarocks install Lua-ReQL
 
-RUN cpanm -v --notest Test::Nginx::Socket
+RUN cpan Test::Nginx::Socket::Lua
 
 RUN ln /usr/local/openresty/nginx/sbin/nginx /usr/local/sbin/
