--- a/lua-resty-reql/alpine/1.0.0/Dockerfile
+++ b/lua-resty-reql/alpine/1.0.0/Dockerfile
@@ -16,3 +16,5 @@ RUN cd luarocks-2.3.0 && make bootstrap
 RUN luarocks install Lua-ReQL
 
 RUN cpan Test::Nginx::Socket::Lua
+
+ENTRYPOINT ["prove", "-r", "t"]
