--- a/lua-resty-reql/ubuntu/1.0.0/Dockerfile
+++ b/lua-resty-reql/ubuntu/1.0.0/Dockerfile
@@ -10,3 +10,5 @@ RUN /usr/local/openresty/luajit/bin/luarocks install Lua-ReQL
 RUN cpan Test::Nginx::Socket::Lua
 
 RUN ln /usr/local/openresty/nginx/sbin/nginx /usr/local/sbin/
+
+ENTRYPOINT ["prove", "-r", "t"]
