Fix build options.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - RESTY_REQL_PATH="lua-resty-reql/alpine/1.0.0"
 
 before_install:
-  - docker build -t grandquista/lua-resty-reql -f $RESTY_REQL_PATH
+  - docker build -t grandquista/lua-resty-reql $RESTY_REQL_PATH
   - REQL_UUID="$(docker create -h reql --network host -P grandquista/lua-resty-reql)"
   - docker cp t/ $REQL_UUID:t
   - docker run -d -p 127.0.0.1:28015:28015 rethinkdb
