--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,8 @@ before_install:
   - REQL_UUID="$(docker create -h reql --network host -P grandquista/lua-resty-reql)"
   - docker cp t/ $REQL_UUID:t
   - docker run -d -p 127.0.0.1:28015:28015 rethinkdb
-  - docker ps -a
   - docker start $REQL_UUID
+  - docker ps -a
+
+script:
+  - docker exec $REQL_UUID prove -r t
