--- a/lua-resty-reql/ubuntu/1.0.0/Dockerfile
+++ b/lua-resty-reql/ubuntu/1.0.0/Dockerfile
@@ -11,4 +11,6 @@ RUN cpan Test::Nginx::Socket::Lua
 
 RUN ln /usr/local/openresty/nginx/sbin/nginx /usr/local/sbin/
 
-ENTRYPOINT ["/bin/sh", "-c"]
+COPY t t
+
+ENTRYPOINT ["prove", "-r", "t"]
