Use new fat alpine build from upstream.

--- a/lua-resty-reql/alpine/1.0.0/Dockerfile
+++ b/lua-resty-reql/alpine/1.0.0/Dockerfile
@@ -1,17 +1,9 @@
-FROM openresty/openresty:latest
+FROM openresty/openresty:alpine-fat
 
 MAINTAINER Adam Grandquist <grandquista@gmail.com>
 
 RUN apk update
 RUN apk add --no-cache build-base curl git openssl-dev perl-dev unzip
-
-RUN curl http://keplerproject.github.io/luarocks/releases/luarocks-2.3.0.tar.gz \
-    | tar -xzf -
-RUN cd luarocks-2.3.0 && ./configure \
-    --with-lua="/usr/local/openresty/luajit/" \
-    --lua-suffix="jit" \
-    --with-lua-include="/usr/local/openresty/luajit/include/luajit-2.1"
-RUN cd luarocks-2.3.0 && make bootstrap
 
 RUN luarocks install Lua-ReQL
 RUN luarocks install lua-testmore
